--- a/project/linux64.cbp
+++ b/project/linux64.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Wombat Cheerios (Linux)" />
+		<Option title="CityCube (Linux)" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/win32" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/citycube" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../content" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
@@ -19,7 +19,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/win32" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/citycube" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../content" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
